Generate the GDExtension library in the Godot project bin directory

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,6 +12,8 @@ set_target_properties( ${PROJECT_NAME} PROPERTIES
     FOLDER ${PROJECT_NAME}
     PREFIX ""
     OUTPUT_NAME "${PROJECT_NAME}${GODOTCPP_SUFFIX}"
+    RUNTIME_OUTPUT_DIRECTORY "$<1:${GDEXTENSION_LIBRARY_OUTPUT_DIRECTORY}>"
+    LIBRARY_OUTPUT_DIRECTORY "$<1:${GDEXTENSION_LIBRARY_OUTPUT_DIRECTORY}>"
 )
 
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_23)
